tests/errors/string_58/INT2CHAR1.src
.IPPcode21

DEFVAR GF@str

INT2CHAR GF@str int@-1
